Converting all queries to prepared statement and using PDO.

--- a/includes/db.php.conf
+++ b/includes/db.php.conf
@@ -9,9 +9,8 @@ foreach ($db as $key => $value) {
   define (strtoupper ($key), $value); 
 }  
 
-$connection = mysqli_connect (DB_HOST, DB_USER, DB_PASS, DB_NAME);
-if ($connection) {
-echo "we are connected";
-}
+//$connection = mysqli_connect (DB_HOST, DB_USER, DB_PASS, DB_NAME);
+
+$connection = new mysqli (DB_HOST, DB_USER, DB_PASS, DB_NAME);
 
 ?>
