--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,6 @@ RewriteEngine on
 
 RewriteRule ^(index|contact|registration)$ $1.php [NC,L]
 
-RewriteRule ^post/(\d+)$ post.php?p_id=$1 [NC,L]
+RewriteRule ^.*post/(\d+)$ post.php?p_id=$1 [NC,L]
 
-
+RewriteRule ^category/(\d+)$ category.php?category=$1 [NC,L]
