--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@ RewriteBase /cms/
 
 RewriteRule ^(index|contact|login|registration)$ $1.php [NC,L]
 
-RewriteRule ^.*post/(\d+)$ post.php?p_id=$1 [NC,L]
+RewriteRule ^post/(\d+)$ post.php?p_id=$1 [NC,L]
 
 RewriteRule ^category/(\d+)$ category.php?category=$1 [NC,QSA,R]
 
