Added 'faker' to generate dummy data.

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.0",
         "pusher/pusher-php-server": "^3.2",
-        "vlucas/phpdotenv": "^2.5"
+        "vlucas/phpdotenv": "^2.5",
+        "fzaninotto/faker": "^1.8"
     }
 }
